--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -3,7 +3,9 @@ body {
   color: #212529;
   font-family: 'Lora', 'Times New Roman', serif;
 }
-
+canvas {
+  background-color:#112;
+}
 p {
   line-height: 1.5;
   margin: 30px 0;
