--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -3,11 +3,11 @@ body {
   color: #212529;
   font-family: 'Lora', 'Times New Roman', serif;
 }
-canvas {
-  background-color:#112;
+#container {
+  position: fixed;
+  width: 100%;
   height: 30vh;
-  width: 100vw;
-}
+} 
 p {
   line-height: 1.5;
   margin: 30px 0;
